DEVEX-3702 hidden input for QIWI

--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -126,7 +126,7 @@
 
       <div
         class="wrap-input refill__wrap-input"
-        *ngIf="selectedMerchant"
+        *ngIf="selectedMerchant && !isQIWI"
         [ngClass]="{'wrap-input--error': !form.valid && isSubmited}"
       >
 
