start modal refactor

--- a/src/app/popups/demo-trading-popup/demo-trading-popup.component.html
+++ b/src/app/popups/demo-trading-popup/demo-trading-popup.component.html
@@ -1,4 +1,4 @@
-<div class="overlay">
+<div class="overlay trading-demo">
   <div class="popup popup-demo">
     <div class="popup__close" (click)="closeMe()"></div>
     <div class="text" [innerHTML]="showHtml">
