--- a/src/app/popups/final-registration/final-registration.component.html
+++ b/src/app/popups/final-registration/final-registration.component.html
@@ -1,76 +1,56 @@
-
-<div class="overlay">
+<div class="overlay final-register">
   <div class="popup popup-login">
     <h6 class="popup__title">{{'Email confirmed' | translate}}</h6>
     <h4 class="popup__subtitle">{{message}}</h4>
-    <form class="popup__form" [formGroup]="passwordForm" >
+    <form class="popup__form" [formGroup]="passwordForm">
 
       <div class="wrap-input popup__wrap-input"
-           [ngClass]="{'wrap-input--error': !passwordFirst.valid && passwordFirst.touched && passwordFirst.errors != null}"
-      >
-        <input
-          (input)="onPasswordInput($event)"
-          class="wrap-input__input pass"
-          [(ngModel)]="password"
-          [type]="getInputType()"
-          formControlName="password"
-        >
+        [ngClass]="{'wrap-input--error': !passwordFirst.valid && passwordFirst.touched && passwordFirst.errors != null}">
+        <input (input)="onPasswordInput($event)" class="wrap-input__input pass" [(ngModel)]="password"
+          [type]="getInputType()" formControlName="password">
         <label class="wrap-input__label" for="">{{'Password' | translate}}</label>
         <div class="wrap-input__line"></div>
-            <div class="input-hint-wrapper">
-              <ng-container *ngIf="passwordFirst.errors != null">
-          <span class="wrap-input__message"
-                [ngClass]="{'msg-error': (!passwordFirst.valid && passwordFirst.touched)}"
-                *ngIf="passwordFirst.errors['passwordValidation'] ||
+        <div class="input-hint-wrapper">
+          <ng-container *ngIf="passwordFirst.errors != null">
+            <span class="wrap-input__message" [ngClass]="{'msg-error': (!passwordFirst.valid && passwordFirst.touched)}"
+              *ngIf="passwordFirst.errors['passwordValidation'] ||
                        passwordFirst.errors['minlength'] ||
                        passwordFirst.errors['required'] ||
                        passwordFirst.errors['maxlength']">
-            {{('Password cannot be less than 8 and more than 20 characters long and should contain of letters (a-z),' +
+              {{('Password cannot be less than 8 and more than 20 characters long and should contain of letters (a-z),' +
             ' numbers (0-9) and/or any combination of @*%!#^!&$<>.()-=+\' characters.') | translate}}
-             </span>
-              </ng-container>
-          </div>
+            </span>
+          </ng-container>
         </div>
+      </div>
 
 
-      <div class="wrap-input popup__wrap-input"
-           [ngClass]="{
+      <div class="wrap-input popup__wrap-input" [ngClass]="{
           'wrap-input--error': !passwordConfirm.valid &&
                                 !!passwordConfirm.value &&
                                 passwordConfirm.touched &&
                                 passwordConfirm.errors != null &&
                                 passwordConfirm.errors['passwordsNotMatch']}">
-        <input
-          (input)="onRepeatPasswordInput($event)"
-          class="wrap-input__input pass"
-          [(ngModel)]="confirmPass"
-          [type]="getInputType()"
-          formControlName="confirmPassword"
-
-        >
-        <label class="wrap-input__label" for="" >
+        <input (input)="onRepeatPasswordInput($event)" class="wrap-input__input pass" [(ngModel)]="confirmPass"
+          [type]="getInputType()" formControlName="confirmPassword">
+        <label class="wrap-input__label" for="">
           {{'Repeat password' | translate}}</label>
         <div class="wrap-input__line"></div>
 
 
-          <div class="input-hint-wrapper" style="height: 15px;">
-            <ng-container *ngIf="passwordConfirm.value && passwordConfirm.touched && passwordConfirm.errors != null">
-          <span *ngIf="passwordConfirm.errors['passwordsNotMatch']"
-                class="wrap-input__message msg-error">
+        <div class="input-hint-wrapper" style="height: 15px;">
+          <ng-container *ngIf="passwordConfirm.value && passwordConfirm.touched && passwordConfirm.errors != null">
+            <span *ngIf="passwordConfirm.errors['passwordsNotMatch']" class="wrap-input__message msg-error">
               {{'Passwords you provided do not match.' | translate}}
             </span>
-            </ng-container>
-          </div>
+          </ng-container>
+        </div>
 
       </div>
 
 
-      <button
-        class="btn popup__btn"
-        (click)="createUser()"
-        style="margin-top: 22px;"
-        [ngClass]="{'bg-none': passwordForm.valid, 'cursor-none': !passwordForm.valid }"
-        [disabled]="loading">
+      <button class="btn popup__btn" (click)="createUser()" style="margin-top: 22px;"
+        [ngClass]="{'bg-none': passwordForm.valid, 'cursor-none': !passwordForm.valid }" [disabled]="loading">
         {{'Finish registration' | translate}}
       </button>
     </form>
