--- a/src/app/popups/identity-popup/identity-popup.component.html
+++ b/src/app/popups/identity-popup/identity-popup.component.html
@@ -1,72 +1,77 @@
 <div class="overlay--modal" *ngIf="showPopup" [@overlayAnimation]="showPopup ? 'show' : 'hide'">
 
-    <div class="modal modal-id" [@modalAnimation]="showPopup ? 'show' : 'hide' ">
-      <div class="modal__controls modal__controls--top">
-        <a class="modal__button modal__button--close" (click)="closeMe()">
-          <span>close</span>
-          <img class="modal__button-icon" src="../../../../assets/img/close.svg">
+  <div class="modal modal-id" [@modalAnimation]="showPopup ? 'show' : 'hide' ">
+    <div class="modal__controls modal__controls--top">
+      <a class="modal__button modal__button--close" (click)="closeMe()">
+        <span>close</span>
+        <img class="modal__button-icon" src="../../../../assets/img/close.svg">
+      </a>
+    </div>
+    <div class="modal__header-mob">
+      <div class="steps__counter steps__counter--mob">{{'step' | translate}} <span
+          class="steps__counter-val">{{step}}</span>/{{stepsSize}}</div>
+      <div class="modal__header-mob-controls">
+        <a class="modal__control-mob" href="#">
+          <img class="modal__control-icon" src="../../../../assets/img/learn-blue.svg">
+        </a>
+        <a class="modal__control-mob" (click)="closeMe()">
+          <img class="modal__control-icon" src="../../../../assets/img/close-blue.svg">
         </a>
       </div>
-      <div class="modal__header-mob">
-        <div class="steps__counter steps__counter--mob">{{'step' | translate}} <span class="steps__counter-val">{{step}}</span>/{{stepsSize}}</div>
-        <div class="modal__header-mob-controls">
-          <a class="modal__control-mob" href="#">
-            <img class="modal__control-icon" src="../../../../assets/img/learn-blue.svg">
+    </div>
+    <div class="modal__header">
+      <ul class="steps">
+        <li class="steps__item" [ngClass]="{'steps__item--current': step === 1}" (click)="moveNext(1)" *ngIf="step > 0">
+          <a class="steps__link" (click)="moveNext(2)">
+            <span class="steps__number"
+              [ngClass]="{'steps__number--current': step === 1, 'steps__number--valid': step != 1 }">1</span>
+            <span class="steps__number-mob-current">1. {{'Enter info' | translate}}</span>
+            <span class="steps__title">{{'Enter info' | translate}}</span>
           </a>
-          <a class="modal__control-mob" (click)="closeMe()">
-            <img class="modal__control-icon" src="../../../../assets/img/close-blue.svg">
+        </li>
+        <li class="steps__item" [ngClass]="{'steps__item--current': step === 2}" *ngIf="step > 1">
+          <a class="steps__link" (click)="moveNext(3)">
+            <span class="steps__number"
+              [ngClass]="{'steps__number--current': step === 2, 'steps__number--valid': step != 2 }">2</span>
+            <span class="steps__number-mob-current">2. {{'Document photo' | translate}}</span>
+            <span class="steps__title">{{'Document photo' | translate}}</span>
           </a>
-        </div>
-      </div>
-      <div class="modal__header">
-        <ul class="steps">
-          <li class="steps__item" [ngClass]="{'steps__item--current': step === 1}" (click)="moveNext(1)" *ngIf="step > 0">
-            <a class="steps__link" (click)="moveNext(2)">
-              <span class="steps__number" [ngClass]="{'steps__number--current': step === 1, 'steps__number--valid': step != 1 }">1</span>
-              <span class="steps__number-mob-current">1. {{'Enter info' | translate}}</span>
-              <span class="steps__title">{{'Enter info' | translate}}</span>
-            </a>
-          </li>
-          <li class="steps__item" [ngClass]="{'steps__item--current': step === 2}" *ngIf="step > 1">
-            <a class="steps__link" (click)="moveNext(3)">
-              <span class="steps__number" [ngClass]="{'steps__number--current': step === 2, 'steps__number--valid': step != 2 }">2</span>
-              <span class="steps__number-mob-current">2. {{'Document photo' | translate}}</span>
-              <span class="steps__title">{{'Document photo' | translate}}</span>
-            </a>
-          </li>
-          <li class="steps__item" [ngClass]="{'steps__item--current': step === 3}" *ngIf="step > 2">
-            <a class="steps__link" (click)="moveNext(4)">
-              <span class="steps__number" [ngClass]="{'steps__number--current': step === 3, 'steps__number--valid': step != 3 }">3</span>
-              <span class="steps__number-mob-current">3. {{'Your photo' | translate}}</span>
-              <span class="steps__title">{{'Your photo' | translate}}</span>
-            </a>
-          </li>
-          <li class="steps__item" [ngClass]="{'steps__item--current': step === 4}" (click)="moveNext(4)" *ngIf="step > 3">
-            <a class="steps__link">
-              <span class="steps__number" [ngClass]="{'steps__number--current': step === 4, 'steps__number--valid': step != 4 }">4</span>
-              <span class="steps__number-mob-current">4. {{'Progress' | translate}}</span>
-              <span class="steps__title">{{'Progress' | translate}}</span>
-            </a>
-          </li>
-        </ul>
-        <div class="steps__counter">{{'step' | translate}} <span class="steps__counter-val">1</span>/4</div>
-      </div>
-      <div class="modal__content">
+        </li>
+        <li class="steps__item" [ngClass]="{'steps__item--current': step === 3}" *ngIf="step > 2">
+          <a class="steps__link" (click)="moveNext(4)">
+            <span class="steps__number"
+              [ngClass]="{'steps__number--current': step === 3, 'steps__number--valid': step != 3 }">3</span>
+            <span class="steps__number-mob-current">3. {{'Your photo' | translate}}</span>
+            <span class="steps__title">{{'Your photo' | translate}}</span>
+          </a>
+        </li>
+        <li class="steps__item" [ngClass]="{'steps__item--current': step === 4}" (click)="moveNext(4)" *ngIf="step > 3">
+          <a class="steps__link">
+            <span class="steps__number"
+              [ngClass]="{'steps__number--current': step === 4, 'steps__number--valid': step != 4 }">4</span>
+            <span class="steps__number-mob-current">4. {{'Progress' | translate}}</span>
+            <span class="steps__title">{{'Progress' | translate}}</span>
+          </a>
+        </li>
+      </ul>
+      <div class="steps__counter">{{'step' | translate}} <span class="steps__counter-val">1</span>/4</div>
+    </div>
+    <div class="modal__content identity-popup">
 
-        <div [ngSwitch]="step">
-          <div *ngSwitchCase="1">
-            <app-step-one (nextStep)="moveNext(2)"></app-step-one>
-          </div>
-          <div *ngSwitchCase="2">
-            <app-step-two (onNextStep)="moveNext(3)"></app-step-two>
-          </div>
-          <div *ngSwitchCase="3">
-            <app-step-three (onNextStep)="moveNext(4)"></app-step-three>
-          </div>
-          <div *ngSwitchCase="4">
-            <app-step-four></app-step-four>
-          </div>
+      <div [ngSwitch]="step">
+        <div *ngSwitchCase="1">
+          <app-step-one (nextStep)="moveNext(2)"></app-step-one>
+        </div>
+        <div *ngSwitchCase="2">
+          <app-step-two (onNextStep)="moveNext(3)"></app-step-two>
+        </div>
+        <div *ngSwitchCase="3">
+          <app-step-three (onNextStep)="moveNext(4)"></app-step-three>
+        </div>
+        <div *ngSwitchCase="4">
+          <app-step-four></app-step-four>
         </div>
       </div>
     </div>
   </div>
+</div>
