--- a/src/app/popups/news-subscribe-popup/news-subscribe-popup.component.html
+++ b/src/app/popups/news-subscribe-popup/news-subscribe-popup.component.html
@@ -1,73 +1,50 @@
-<!-- <div style="position: absolute; background: red;">
-  <p>
-    news-subscribe-popup works!
-  </p>
-  <button (click)="openThankPopup()">Thank</button>
-  <button (click)="closeSubPopup()">close</button>
-</div> -->
-
 <div class="overlay">
 	<div class="popup popup-subscribe">
 		<div class="popup__close" (click)="closeSubPopup()"></div>
-
 		<h6 class="popup__title popup_title--dm">Subscribe to news</h6>
-		<!-- login user -->
-		<h4 class="popup__subtitle popup_title--dm" *ngIf="!resErrorMesage && isAuthenticated">Mailing will be made to the email specified during registration</h4>
-		<!-- end login user -->
-		<!-- not login user -->
-		<h4 class="popup__subtitle popup_title--dm">{{(!resErrorMesage && !isAuthenticated) ? 'Enter email to subscribe to news' : resErrorMesage}}</h4>
-		<!-- end not login user -->
-
-		<!-- login user -->
+		<h4 class="popup__subtitle popup_title--dm" *ngIf="!resErrorMesage && isAuthenticated">Mailing will be made to
+			the email specified during registration</h4>
+		<h4 class="popup__subtitle popup_title--dm">
+			{{(!resErrorMesage && !isAuthenticated) ? 'Enter email to subscribe to news' : resErrorMesage}}</h4>
 		<form class="popup__form" [formGroup]="emailForm" *ngIf="!isAuthenticated">
 			<div>
 				<div class="wrap-input popup__wrap-input">
-					<input class="wrap-input__input"
-                 type="text"
-                 formControlName="email"
-                 required>
-					<label class="wrap-input__label" for=""
-                 [ngClass]="{'wrap-input--error': !emailControl.valid
+					<input class="wrap-input__input" type="text" formControlName="email" required>
+					<label class="wrap-input__label" for="" [ngClass]="{'wrap-input--error': !emailControl.valid
 								&& emailControl.touched
 								&& emailControl.errors != null}">
-					{{'Email' | translate}}
-				</label>
-				<div class="wrap-input__line">
-			</div>
-			<div>
-        <div class="input-hint-wrapper">
-          <div *ngIf="!emailControl.valid && emailControl.touched">
-										<span class="wrap-input__message"
-                          *ngIf="emailControl.errors['required'] && emailControl.touched">
-										{{'Email is required' | translate}}
-									</span>
-            <span class="wrap-input__message"
-                  *ngIf="emailControl.errors['emailInvalid']
+						{{'Email' | translate}}
+					</label>
+					<div class="wrap-input__line">
+					</div>
+					<div>
+						<div class="input-hint-wrapper">
+							<div *ngIf="!emailControl.valid && emailControl.touched">
+								<span class="wrap-input__message"
+									*ngIf="emailControl.errors['required'] && emailControl.touched">
+									{{'Email is required' | translate}}
+								</span>
+								<span class="wrap-input__message" *ngIf="emailControl.errors['emailInvalid']
 									&& emailControl.touched
 									&& !emailControl.errors['required']
 									&& !emailControl.errors['specialCharacter']">
 									{{'Wrong email' | translate}}
 								</span>
-            <span class="wrap-input__message"
-                  *ngIf="emailControl.errors['specialCharacter']
+								<span class="wrap-input__message" *ngIf="emailControl.errors['specialCharacter']
 								&& !emailControl.errors['required']">
-								{{'Email cannot contain special characters except period (.), plus (+), underscore (_) and dash (-)' | translate}}
-							</span>
-            <span class="wrap-input__message"
-                  *ngIf="emailControl.errors['maxlength']
+									{{'Email cannot contain special characters except period (.), plus (+), underscore (_) and dash (-)' | translate}}
+								</span>
+								<span class="wrap-input__message" *ngIf="emailControl.errors['maxlength']
 							&& !emailControl.errors['required']
 							&& !emailControl.errors['emailInvalid']">
-							{{'Email cannot be more than 40 characters long' | translate}}
-						</span>
-          </div>
-        </div>
-</div>
-</div>
-</div>
-</form>
-<!-- login user -->
-<button class="btn popup__btn popup__btn--active"
-(click)="emailSubscribe()"
->Subscribe</button>
-</div>
+									{{'Email cannot be more than 40 characters long' | translate}}
+								</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</form>
+		<button class="btn popup__btn popup__btn--active" (click)="emailSubscribe()">Subscribe</button>
+	</div>
 </div>
