finish modal refactor

--- a/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
+++ b/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
@@ -1,77 +1,45 @@
-<div class="overlay">
+<div class="overlay registration-popup">
   <div class="popup popup-login">
-    <div
-      class="popup__close"
-      (click)="closeMe()"
-    ></div>
+    <div class="popup__close" (click)="closeMe()"></div>
     <ng-template [ngTemplateOutlet]="currentTemplate">
     </ng-template>
     <ng-template #emailInputTemplate>
       <h6 class="popup__title">{{'Register' | translate}}</h6>
       <h6 class="popup__title-mob mobile-container">{{'Registration' | translate}}</h6>
-      <form
-        class="popup__form"
-        [formGroup]="emailForm"
-      >
+      <form class="popup__form" [formGroup]="emailForm">
         <div>
-          <div
-            class="wrap-input popup__wrap-input"
-            [ngClass]="{'wrap-input--error': emailForm.get('email').touched
-               && (!emailForm.valid || (!!emailServerError && emailServerError !== 'start'))}"
-          >
-            <input
-              required
-              appExcludeInputSpaces
-              class="wrap-input__input"
-              formControlName="email"
-              [ngClass]="{'input--error': !emailForm.get('email').valid && emailForm.get('email').touched }"
-            >
-            <label
-              class="wrap-input__label"
-              for=""
-            >{{'Email' | translate}}</label>
+          <div class="wrap-input popup__wrap-input" [ngClass]="{'wrap-input--error': emailForm.get('email').touched
+               && (!emailForm.valid || (!!emailServerError && emailServerError !== 'start'))}">
+            <input required appExcludeInputSpaces class="wrap-input__input" formControlName="email"
+              [ngClass]="{'input--error': !emailForm.get('email').valid && emailForm.get('email').touched }">
+            <label class="wrap-input__label" for="">{{'Email' | translate}}</label>
             <div class="wrap-input__line"></div>
             <!--Input error section starts-->
             <div *ngIf="emailForm.get('email').invalid && emailForm.get('email').errors || !!emailServerError">
-              <div
-                class="input-hint-wrapper"
-                *ngIf="emailForm.get('email').invalid && emailForm.get('email').touched"
-              >
+              <div class="input-hint-wrapper" *ngIf="emailForm.get('email').invalid && emailForm.get('email').touched">
                 <div *ngIf="emailForm.get('email').invalid && emailForm.get('email').errors">
-                  <span
-                    class="wrap-input__message"
-                    *ngIf="emailForm.get('email').errors['emailInvalid']
+                  <span class="wrap-input__message" *ngIf="emailForm.get('email').errors['emailInvalid']
                       && emailForm.get('email').touched
                       && !emailForm.get('email').errors['required']
-                      && !emailForm.get('email').errors['specialCharacter']"
-                  >
+                      && !emailForm.get('email').errors['specialCharacter']">
                     {{'Wrong email' | translate}}
                   </span>
-                  <span
-                    class="wrap-input__message"
-                    *ngIf="emailForm.get('email').errors['specialCharacter']
-                    && !emailForm.get('email').errors['required']"
-                  >
+                  <span class="wrap-input__message" *ngIf="emailForm.get('email').errors['specialCharacter']
+                    && !emailForm.get('email').errors['required']">
                     {{'Email cannot contain special characters except period (.), plus (+), underscore (_) and dash (-)' | translate}}
                   </span>
-                  <span
-                    class="wrap-input__message"
-                    *ngIf="emailForm.get('email').errors['required']
-                        && emailForm.get('email').touched"
-                  >
+                  <span class="wrap-input__message" *ngIf="emailForm.get('email').errors['required']
+                        && emailForm.get('email').touched">
                     {{'Email is required' | translate}}
                   </span>
                 </div>
 
               </div>
-              <div
-                class="input-hint-wrapper server-error-hint"
-                *ngIf="((emailForm.valid
+              <div class="input-hint-wrapper server-error-hint" *ngIf="((emailForm.valid
                      && !pendingCheckEmail)
                       || (!!emailForm.get('email').value
                        && previousEmail === emailForm.get('email').value))
-                        && !!AUTH_MESSAGES[emailServerError]"
-              >
+                        && !!AUTH_MESSAGES[emailServerError]">
                 <span class="wrap-input__message">
                   {{AUTH_MESSAGES[emailServerError] | translate}}
                 </span>
@@ -81,63 +49,35 @@
           </div>
         </div>
 
-        <button
-          class="btn popup__btn"
-          [disabled]="emailForm.get('email').invalid
+        <button class="btn popup__btn" [disabled]="emailForm.get('email').invalid
             && emailForm.get('email').errors
             || (!!emailServerError && emailServerError !== 'start')
-            || pendingCheckEmail"
-          [ngClass]="{
+            || pendingCheckEmail" [ngClass]="{
             'bg-none': !emailForm.get('email').valid&& !!emailServerError,
             'popup__btn--active': emailForm.get('email').valid && !emailServerError
-          }"
-          (click)="emailSubmit()"
-        >
+          }" (click)="emailSubmit()">
           {{'Create an account' | translate}}
         </button>
       </form>
 
       <div class="popup__links-wrap mobile-container">
         <div class="agree-terms"><span class="accept-icon">
-            <svg
-              width="17"
-              height="14"
-              viewBox="0 0 17 14"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
+            <svg width="17" height="14" viewBox="0 0 17 14" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M2 1.97852C1.17157 1.97852 0.5 2.65009 0.5 3.47852V11.4785C0.5 12.3069 1.17157 12.9785 2 12.9785H10C10.8284 12.9785 11.5 12.3069 11.5 11.4785V3.47852C11.5 2.65009 10.8284 1.97852 10 1.97852H2Z"
-                stroke="#BFBFBF"
-              />
-              <path
-                d="M3.42383 7.38525L6.16746 9.89641L15.4752 1"
-                stroke="#BFBFBF"
-                stroke-width="1.5"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              />
+                stroke="#BFBFBF" />
+              <path d="M3.42383 7.38525L6.16746 9.89641L15.4752 1" stroke="#BFBFBF" stroke-width="1.5"
+                stroke-linecap="round" stroke-linejoin="round" />
             </svg>
           </span>{{'By registering you agree with' | translate}}</div>
-        <a
-          class="popup__link"
-          routerLink="/static/terms-and-conditions"
-          title="Terms and conditions"
-          (click)="popupService.closeRegistrationPopup()"
-        >{{'Terms and conditions' | translate}}</a>
-        <a
-          class="popup__link popup__link--mob"
-          routerLink="/static/terms-and-conditions"
-          title="Terms and conditions"
-          (click)="popupService.closeRegistrationPopup()"
-        >{{'Terms and conditions' | translate}}</a>
+        <a class="popup__link" routerLink="/static/terms-and-conditions" title="Terms and conditions"
+          (click)="popupService.closeRegistrationPopup()">{{'Terms and conditions' | translate}}</a>
+        <a class="popup__link popup__link--mob" routerLink="/static/terms-and-conditions" title="Terms and conditions"
+          (click)="popupService.closeRegistrationPopup()">{{'Terms and conditions' | translate}}</a>
       </div>
       <div class="popup__links-wrap popup__links-wrap--hidden-mob">
         <span>{{'Already have an account?' | translate}}</span>
-        <a
-          class="popup__link"
-          (click)="openLogInMobile()"
-        >{{'Log in' | translate}}</a>
+        <a class="popup__link" (click)="openLogInMobile()">{{'Log in' | translate}}</a>
       </div>
 
       <div class="popup__link-mob mobile-container">
@@ -151,10 +91,7 @@
 
     <ng-template #captchaTemplate>
       <h6 class="popup__title popup_title--dm">{{'Registration' | translate}}</h6>
-      <re-captcha
-        (resolved)="resolvedCaptcha($event)"
-        [siteKey]="recaptchaKey"
-      ></re-captcha>
+      <re-captcha (resolved)="resolvedCaptcha($event)" [siteKey]="recaptchaKey"></re-captcha>
       <!--<div class="popup__links-wrap">-->
       <!--<a class="popup__link" (click)="setTemplate('emailInputTemplate')">Go to registration form</a>-->
       <!--</div>-->
@@ -163,18 +100,12 @@
     <ng-template #devCaptchaTemplate>
       <h6 class="popup__title popup_title--dm">{{'Registration' | translate}}</h6>
       <h4 class="popup__subtitle popup_title--dm">Captcha emulation for developers and QA</h4>
-      <button
-        class="btn popup__btn popup__btn--active"
-        (click)="resolvedCaptcha($event)"
-      >Resolve</button>
+      <button class="btn popup__btn popup__btn--active" (click)="resolvedCaptcha($event)">Resolve</button>
     </ng-template>
 
     <ng-template #emailConfirmLinkTemplate>
       <h6 class="popup__title popup_title--dm">{{'Confirm the email' | translate}}</h6>
-      <h4
-        class="popup__subtitle popup_title--dm"
-        [innerHtml]="afterCaptchaMessage"
-      ></h4>
+      <h4 class="popup__subtitle popup_title--dm" [innerHtml]="afterCaptchaMessage"></h4>
       <div class="popup__line"></div>
       <div class="popup__text--light">{{'If you haven\'t received the email, do the following:' | translate}}</div>
       <div class="popup__text--light">
