--- a/src/app/popups/restored-password-popup/restored-password-popup.component.html
+++ b/src/app/popups/restored-password-popup/restored-password-popup.component.html
@@ -1,4 +1,4 @@
-<div class="overlay">
+<div class="overlay restored-pass">
   <div class="popup popup-registration">
     <div class="popup__close" (click)="closeRecoveryPassPopup()"></div>
     <h6 class="popup__title">{{'Thank you!' | translate}}</h6>
