--- a/src/assets/scss/pages/_center-popups.scss
+++ b/src/assets/scss/pages/_center-popups.scss
@@ -22,16 +22,17 @@
   }
 }
 
-/*--- media start ---*/
 @media (min-width: 1200px) {
   .popup-demo {
     max-width: 536px;
     .btn {
       margin-top: 12px;
     }
+    .text {
+      color: #4b4b4b;
+    }
   }
 }
-/*--- media end ---*/
 
 .login-modal {
   re-captcha {
@@ -389,5 +390,317 @@
         color: #4b4b4b;
       }
     }
+  }
+}
+
+.recovery-pass {
+  .popup__btn.btn.bg-none {
+    background-color: transparent !important;
+  }
+
+  re-captcha {
+    margin: auto;
+  }
+
+  .wrap-input__message {
+    color: #eb5757 !important;
+    // position: absolute;
+    top: 45px;
+  }
+  @media (max-width: 992px) {
+    .accept-icon {
+      display: none;
+    }
+    .logo-login-mob {
+      display: block;
+      margin-bottom: 10px;
+      img {
+        display: block;
+      }
+    }
+    .popup__title {
+      display: none;
+    }
+
+    .popup__title-mob {
+      display: block;
+      font-weight: 400;
+      line-height: 1;
+      font-size: 24px;
+      color: #dedefb;
+      margin-bottom: 65px;
+    }
+    .popup {
+      .wrap-input--error {
+        .wrap-input__input {
+          color: #fff;
+        }
+      }
+      .wrap-input__input {
+        &:focus {
+          & ~ .wrap-input__label {
+            background: #191a39;
+          }
+        }
+      }
+      background: #191a39;
+      padding: 27px;
+      padding-bottom: 29px;
+      border-radius: 0;
+      .wrap-input__input:valid {
+        & ~ .wrap-input__label {
+          background: #191a39;
+        }
+      }
+    }
+    .wrap-input__input {
+      color: #dedefb;
+      margin: 0;
+    }
+    .popup__form {
+      max-width: 320px;
+    }
+    .popup__btn {
+      max-width: unset;
+      margin-top: 18px;
+    }
+    .popup__link-text--mob {
+      color: #576e9c;
+    }
+    .agree-terms {
+      color: #576e9c;
+      font-size: 14px;
+    }
+    .popup__links-wrap {
+      justify-content: flex-start;
+      font-weight: 400;
+      margin: 32px auto 0;
+      letter-spacing: 0.1px;
+    }
+    .popup__link {
+      font-size: 14px;
+      margin-left: 0;
+      // display: none;
+    }
+    .popup__link--mob {
+      font-size: 14px;
+      margin-left: 3px;
+      display: flex;
+      justify-content: flex-start;
+    }
+    .popup__wrap-input {
+      margin-bottom: 10px;
+    }
+    .popup__link-mob {
+      position: absolute;
+      bottom: 38px;
+      left: 27px;
+      right: 27px;
+      display: block;
+      width: 100%;
+      height: auto;
+      text-decoration: none;
+      background-color: unset;
+      color: #237bef;
+      font-weight: 500;
+      span {
+        margin-right: 2px;
+        color: #576e9c;
+        letter-spacing: -0.1px;
+        word-spacing: 1px;
+      }
+    }
+    .popup__close {
+      top: 23px;
+      right: 19px;
+      width: 17px;
+      height: 17px;
+    }
+    .popup_title--dm {
+      display: block;
+      color: #dedefb;
+    }
+    .wrap-input__label {
+      background: #191a39;
+    }
+  }
+
+  .popup__link {
+    font-size: 14px;
+    line-height: 20px;
+    cursor: default;
+    text-align: center;
+  }
+}
+
+.registration-popup {
+  re-captcha {
+    margin: 0 auto;
+  }
+
+  .btn--error {
+    background-color: #eb5757 !important;
+    color: #ffffff;
+    border: none;
+  }
+
+  .wrap-input__message {
+    color: #eb5757 !important;
+    // position: absolute;
+    top: 45px;
+  }
+  .popup__title--mob {
+    display: none;
+  }
+
+  .popup__link--mob {
+    display: none;
+  }
+
+  @media (max-width: 992px) {
+    .accept-icon {
+      display: none;
+    }
+    .logo-login-mob {
+      display: block;
+      margin-bottom: 10px;
+      img {
+        display: block;
+      }
+    }
+    .popup__title {
+      display: none;
+    }
+
+    .popup__title-mob {
+      display: block;
+      font-weight: 400;
+      line-height: 1;
+      font-size: 24px;
+      color: #dedefb;
+      margin-bottom: 65px;
+    }
+    .popup {
+      .wrap-input--error {
+        .wrap-input__input {
+          color: #fff;
+        }
+      }
+      .wrap-input__input {
+        &:focus {
+          & ~ .wrap-input__label {
+            background: #191a39;
+          }
+        }
+      }
+      background: #191a39;
+      padding: 27px;
+      padding-bottom: 91px;
+      border-radius: 0;
+      .wrap-input__input:valid {
+        & ~ .wrap-input__label {
+          background: #191a39;
+        }
+      }
+    }
+    .wrap-input__input {
+      color: rgba(148, 194, 255, 0.5);
+      margin: 0;
+      border-color: rgba(148, 194, 255, 0.5);
+    }
+    .popup__form {
+      max-width: 320px;
+    }
+    .popup__btn {
+      max-width: unset;
+      margin-top: 18px;
+      color: #237bef;
+      border-color: #237bef;
+      &.popup__btn--active {
+        color: #fff;
+      }
+    }
+    .popup__link-text--mob {
+      color: #576e9c;
+    }
+    .agree-terms {
+      color: #576e9c;
+      font-size: 14px;
+    }
+    .popup__links-wrap {
+      justify-content: flex-start;
+      font-weight: 400;
+      margin: 32px auto 0;
+      letter-spacing: 0.1px;
+    }
+    .popup__link {
+      font-size: 14px;
+      margin-left: 0;
+      display: none;
+    }
+    .popup__link--mob {
+      font-size: 14px;
+      margin-left: 3px;
+      display: flex;
+      justify-content: flex-start;
+    }
+    .popup__wrap-input {
+      margin-bottom: 10px;
+    }
+    .popup__link-mob {
+      position: absolute;
+      bottom: 38px;
+      left: 27px;
+      right: 27px;
+      display: block;
+      width: 100%;
+      height: auto;
+      text-decoration: none;
+      background-color: unset;
+      color: #237bef;
+      font-weight: 500;
+      span {
+        margin-right: 2px;
+        color: #576e9c;
+        letter-spacing: -0.1px;
+        word-spacing: 1px;
+      }
+    }
+    .popup__close {
+      top: 23px;
+      right: 19px;
+      width: 17px;
+      height: 17px;
+    }
+    .popup_title--dm {
+      display: block;
+      color: #dedefb;
+    }
+    .wrap-input__label {
+      background: #191a39;
+      color: rgba(148, 194, 255, 0.5);
+    }
+  }
+
+  // TEMP STYLE
+  .input-hint-wrapper {
+    opacity: 1 !important;
+  }
+}
+
+.thank-you-popup {
+  .tnx-head {
+    font-size: 24px;
+    margin-bottom: 22px;
+  }
+
+  .tnx-description {
+    font-size: 19px;
+    margin-bottom: 27px;
+  }
+
+  .popup {
+    min-height: unset;
+    padding: 50px 32px;
   }
 }
