--- a/src/app/ieo/components/common-ieo/common-ieo.component.html
+++ b/src/app/ieo/components/common-ieo/common-ieo.component.html
@@ -234,7 +234,7 @@
         <div class="ieo-list-item {{item.status  | showStageStatus:true | lowercase}}">
           <div class="img-part">
             <div class="img-e-tao">
-              <img [src]="'assets/img/ieo/dom.png'" alt="">
+              <img [src]="'assets/img/ieo/dom-blue.png'" alt="">
             </div>
           </div>
           <div class="info-coin-part">
