--- a/src/app/ieo/components/ieo-description-wrapper/ieo-description-wrapper.component.html
+++ b/src/app/ieo/components/ieo-description-wrapper/ieo-description-wrapper.component.html
@@ -1,6 +1,6 @@
 <div [ngSwitch]="IEOId">
   <app-ieo-description
-    *ngSwitchCase="1"
+    *ngSwitchCase="'DOM'"
     [ieoToken]="ieoToken"
   ></app-ieo-description>
   <!-- <app-ieo-description2
