--- a/src/app/shared/components/currency-select-crypto/currency-select-crypto.component.html
+++ b/src/app/shared/components/currency-select-crypto/currency-select-crypto.component.html
@@ -1,4 +1,7 @@
-<div class="select">
+<div
+  class="select"
+  *ngIf="activeCurrency"
+>
   <div
     class="select__value select__value--active"
     (click)="currencyDropdownToggle()"
