--- a/src/assets/scss/components/_side-popups.scss
+++ b/src/assets/scss/components/_side-popups.scss
@@ -35,6 +35,9 @@
     @media(max-width: 1199px){
       color:#DEDEFB;
     }
+    &.full-width {
+      width: 100%;
+    }
   }
   .daily-avaliable {
     @extend .avaliable;
