--- a/src/app/freecoins/freecoins-popup/freecoins-popup-step-one/freecoins-popup-step-one.component.html
+++ b/src/app/freecoins/freecoins-popup/freecoins-popup-step-one/freecoins-popup-step-one.component.html
@@ -1,75 +1,268 @@
 <div class="refil-fiat side-popups">
   <h2 class="title refill__title">{{'Give away free coins' | translate}} </h2>
-  <form [formGroup]="form">
+  <form
+    [formGroup]="form"
+    (ngSubmit)="onSubmit($event)"
+    novalidate
+    *ngIf="activeCurrency"
+  >
     <div class="refill__inputs-wrap">
       <!-- TODO add styles to select--error -->
 
       <div class="refill__select">
-        <app-currency-select-crypto
-          [activeCurrency]="{name: 'XRM', description: 'sdfsdf', id: 1}"
-          [currencies]="[]"
-          (selectCurrency)="selectCurrency($event)"
-        ></app-currency-select-crypto>
-      </div>
+        <div class="currency-select-wrapper">
+          <app-currency-select-crypto
+            [activeCurrency]="activeCurrency"
+            [currencies]="currencies"
+            (selectCurrency)="selectCurrency($event)"
+          ></app-currency-select-crypto>
+        </div>
 
-      <!-- <div
+        <div
           class="wrap-input send__wrap-input"
           [ngClass]="{
-            'wrap-input--error': form.get('amount').invalid&& (form.get('amount').touched || isSubmited)
+            'wrap-input--error': formAmount.invalid&& (formAmount.touched || isSubmited)
           }"
         >
 
-          <div class="avaliable">{{'Available:' | translate}}
+          <div class="avaliable full-width">{{'Available:' | translate}}
             <a
               (click)="balanceClick()"
               class="link"
-              [ngStyle]="{'pointer-events': loadingBalance ? 'none' : 'auto'}"
             >
-              {{activeBalance | currencyFormat}} {{currName}}
+              {{activeBalance | currencyFormat}} {{activeCurrency.name}}
             </a>
           </div>
           <app-price-input
-            [placeholder]="'Amount'"
-            [currencyName]="activeCrypto.name"
-            (customInput)="amountInput($event)"
-            (customBlur)="amountBlur($event)"
+            [placeholder]="activeCurrency.name + ' give away Amount'"
+            [currencyName]="activeCurrency.name"
+            (customInput)="onInputAmount($event)"
             name="amount"
             formControlName="amount"
           >
-          </app-price-input> -->
+          </app-price-input>
 
-      <!-- <span class="bottom-tooltip wrap-input__message--show">
+          <span class="bottom-tooltip wrap-input__message--show">
             {{
-            'Minimum sum for withdrawal' | translate
+              'Min amount is' | translate
             }} {{
-            minWithdrawSum  | currencyFormat
+              minAmount | currencyFormat
             }} {{
-            currName
+              activeCurrency.name
             }}
-          </span> -->
+          </span>
 
-      <!--Input error section starts-->
-      <!-- <div *ngIf="form.get('amount').errors != null">
+          <!--Input error section starts-->
+          <div *ngIf="formAmount.errors != null">
             <div class="input-hint-wrapper">
-
               <span
                 class="wrap-input__message wrap-input__message--show"
-                *ngIf="form.controls['amount'].errors['isMaxThenActiveBalance'] && (form.controls['amount'].touched || isSubmited)"
+                *ngIf="formAmount.errors['maxAmount'] && (formAmount.touched || isSubmited)"
               >
                 {{
                   'Your available balance:' | translate
                 }} {{
                   activeBalance | currencyFormat
                 }} {{
-                  currName
+                  activeCurrency.name
+                }}
+              </span>
+              <span
+                class="wrap-input__message wrap-input__message--show"
+                *ngIf="formAmount.errors['minAmount'] && (formAmount.touched || isSubmited)"
+              >
+                {{
+                  'Min amount is:' | translate
+                }} {{
+                  minAmount | currencyFormat
+                }} {{
+                  activeCurrency.name
                 }}
               </span>
             </div>
-          </div> -->
-      <!--Input error section ends-->
-      <!-- </div> -->
+          </div>
+          <!--Input error section ends-->
+        </div>
+
+        <div class="wrap-input send__wrap-input">
+          <div class="check">
+            <input
+              type="checkbox"
+              id="oneTime"
+              formControlName="isOneTime"
+              (change)="onCheckeOneTime($event)"
+            />
+            <label
+              for="oneTime"
+              class="read"
+            ></label>
+            <span>{{'One-time distribution' | translate}}</span>
+          </div>
+        </div>
+
+        <div
+          class="wrap-input send__wrap-input"
+          [ngClass]="{
+            'wrap-input--error': formPeriod.invalid && (formPeriod.touched || isSubmited)
+          }"
+        >
+          <input
+            appOnlyNumbers="true"
+            class="wrap-input__input"
+            type="text"
+            name="period"
+            required
+            autocomplete="off"
+            formControlName="period"
+          >
+          <label
+            class="wrap-input__label"
+            for=""
+          >{{'Period (minutes)' | translate}}</label>
+
+          <span class="bottom-tooltip wrap-input__message--show">
+            {{
+              'Min period is ' | translate
+            }} {{
+              minPeriod
+            }} {{
+              ' minute' | translate
+            }}
+          </span>
+
+          <!--Input error section starts-->
+          <div *ngIf="formPeriod.errors != null">
+            <div class="input-hint-wrapper">
+              <span
+                class="wrap-input__message wrap-input__message--show"
+                *ngIf="formPeriod.errors['minPeriod'] && (formPeriod.touched || isSubmited)"
+              >
+                {{
+                  'Min period is:' | translate
+                }} {{
+                  minPeriod
+                }} {{
+                  ' minute' | translate
+                }}
+              </span>
+            </div>
+          </div>
+          <!--Input error section ends-->
+
+        </div>
+        <div
+          class="wrap-input send__wrap-input"
+          [ngClass]="{
+            'wrap-input--error': formPrize.invalid && (formPrize.touched || isSubmited)
+          }"
+        >
+          <app-price-input
+            [placeholder]="activeCurrency.name + ' prize Amount'"
+            [currencyName]="activeCurrency.name"
+            name="prize"
+            formControlName="prize"
+          >
+          </app-price-input>
+
+          <span class="bottom-tooltip wrap-input__message--show">
+            {{
+              'Min amount is' | translate
+            }} {{
+              minPrize | currencyFormat
+            }} {{
+              activeCurrency.name
+            }}
+          </span>
+
+          <!--Input error section starts-->
+          <div *ngIf="formPrize.errors != null">
+            <div class="input-hint-wrapper">
+              <span
+                class="wrap-input__message wrap-input__message--show"
+                *ngIf="formPrize.errors['maxPrize'] && (formPrize.touched || isSubmited)"
+              >
+                {{
+                  'Max amount is:' | translate
+                }} {{
+                  (formAmount.value || 0) | currencyFormat
+                }} {{
+                  activeCurrency.name
+                }}
+              </span>
+              <span
+                class="wrap-input__message wrap-input__message--show"
+                *ngIf="formPrize.errors['minPrize'] && (formPrize.touched || isSubmited)"
+              >
+                {{
+                  'Min amount is:' | translate
+                }} {{
+                  minPrize | currencyFormat
+                }} {{
+                  activeCurrency.name
+                }}
+              </span>
+            </div>
+          </div>
+          <!--Input error section ends-->
+        </div>
+      </div>
+
     </div>
+
+    <div class="send__line"></div>
+    <div
+      class="send__info"
+      *ngIf="activeCurrency"
+    >
+      <div class="send__info-row">
+        <div class="send__info-title">{{'You want to give away:' | translate}}</div>
+        <div class="send__info-value">{{formAmount.value || 0 | currencyFormat}} {{activeCurrency.name}}</div>
+      </div>
+      <div class="send__info-row">
+        <div class="send__info-title">{{'Period:' | translate}}</div>
+        <div
+          class="send__info-value"
+          *ngIf="!formOneTime.value"
+        >{{formPeriod.value || 0}} {{formPeriod.value > 1 ? 'minutes': 'minute'}} </div>
+        <div
+          class="send__info-value"
+          *ngIf="formOneTime.value"
+        >{{'One-time distribution'}} </div>
+      </div>
+      <div class="send__info-row">
+        <div class="send__info-title">{{activeCurrency.name}} {{'prize amount:' | translate}}</div>
+        <div class="send__info-value">{{formPrize.value || 0 | currencyFormat}} {{activeCurrency.name}}</div>
+      </div>
+      <div class="send__info-row">
+        <div class="send__info-title">{{'Total qty of prizes:' | translate}}</div>
+        <div class="send__info-value">{{totalQtyOfPrizes}}</div>
+      </div>
+    </div>
+
+    <button
+      class="btn btn--center"
+      [disabled]="form.invalid"
+      type="submit"
+    >
+      {{'Give away' | translate}}
+    </button>
+    <div class="send__line"></div>
+
+
   </form>
-  <button class="btn btn--center">
-    {{'Give away' | translate}}
-  </button>
+</div>
+
+<div class="note modal__note">
+  <div class="note__title">{{'Please note:' | translate}}</div>
+  <ul class="note__list">
+    <li class="note__list-item">
+      {{'Create your own marketing campaign by giving away free coins' | translate}}.
+    </li>
+    <li class="note__list-item">
+      {{'To comfirm give coins, you will need to enter 2fa code (from letter or google app)' | translate}}.
+    </li>
+    <li class="note__list-item">
+      {{'After making a give away, you can see this operation in transaction history page' | translate}}.
+    </li>
+  </ul>
+</div>
