--- a/src/app/freecoins/freecoins-popup/freecoins-popup-step-two/freecoins-popup-step-two.component.html
+++ b/src/app/freecoins/freecoins-popup/freecoins-popup-step-two/freecoins-popup-step-two.component.html
@@ -1,4 +1,53 @@
-<p>
-  freecoins-popup-step-two works!
-</p>
-<button (click)="nextStep.emit(3)">next step</button>
+<div class="modal__content qubera-content refil-s3">
+  <div class="fiat-deposit-s1 fiat-withdraw-s1">
+    <h4
+      class="popup__subtitle popup_title--dm"
+      [ngClass]="{'msg-error' : isError}"
+    >
+      {{twoFaTitle}}
+    </h4>
+
+    <form
+      [formGroup]="form"
+      (ngSubmit)="onSubmit()"
+    >
+      <div class="input-block">
+        <input
+          class="wrap-input__input"
+          type="text"
+          name="code"
+          formControlName="code"
+          required
+        >
+        <label
+          class="wrap-input__label"
+          for="code"
+        >{{'Code' | translate}}</label>
+        <ng-container *ngIf="formPin.invalid && !formPin.untouched && !statusMessage">
+          <div class="input-hint-wrapper">
+            <span
+              class="wrap-input__message"
+              *ngIf="formPin.invalid"
+            >
+              {{'Code field is required.' | translate}}
+            </span>
+          </div>
+        </ng-container>
+        <ng-container *ngIf="statusMessage">
+          <div class="input-hint-wrapper">
+            <span class="wrap-input__message">
+              {{statusMessage | translate}}
+            </span>
+          </div>
+        </ng-container>
+      </div>
+      <button
+        class="btn btn--center"
+        type="submit"
+        [disabled]="form.invalid"
+      >
+        {{'Confirm' | translate}}
+      </button>
+    </form>
+  </div>
+</div>
