--- a/src/app/shared/components/currency-select-fiat/currency-select-fiat.component.html
+++ b/src/app/shared/components/currency-select-fiat/currency-select-fiat.component.html
@@ -2,8 +2,8 @@
   <div
     class="select__value select__value--active"
     (click)="toggleCurrencyDropdown()"
-    [ngClass]="{'select__value--error': fiatDataByName && !selectedMerchant}"
   >
+    <!-- [ngClass]="{'select__value--error': fiatDataByName && !selectedMerchant}" -->
     <div class="icon-wr">
       <img
         [src]="activeCurrency.name | getIconUrl:true"
