add ieo link + change end ieo data

--- a/src/app/ieo/components/ieo-description-wrapper/components/ieo-description/ieo-description.component.html
+++ b/src/app/ieo/components/ieo-description-wrapper/components/ieo-description/ieo-description.component.html
@@ -2,22 +2,25 @@
   <div class="ieo_info-wrapper">
     <div class="text-info-block">
       <h4>{{'PROJECT INTRODUCTION' | translate}}</h4>
-      <p>The Diamond Open Market is EOS-based platform for everybody to buy and sell natural and lab-grown diamonds. DOM will present a marketplace for business and individuals working as a reliable tool for B2B or P2P relations. The platform will gather individual diamond holders, buyers, cutters, jewelers, as well as everybody involved in the gemstone business to agree on the prices and build a transparent and fair diamond market, offering a variety of payment methods, including cryptocurrency transfers.</p>
+      <p>The Diamond Open Market is EOS-based platform for everybody to buy and sell natural and lab-grown diamonds. DOM
+        will present a marketplace for business and individuals working as a reliable tool for B2B or P2P relations. The
+        platform will gather individual diamond holders, buyers, cutters, jewelers, as well as everybody involved in the
+        gemstone business to agree on the prices and build a transparent and fair diamond market, offering a variety of
+        payment methods, including cryptocurrency transfers.</p>
     </div>
     <div class="text-info-block">
       <h4>{{'KEY FEATURES FOR USERS' | translate}}</h4>
 
       <div class="key-features-wr">
         <div class="infogr-wr">
-          <img
-            src="assets/img/ieo/us.png"
-            alt=""
-          >
+          <img src="assets/img/ieo/us.png" alt="">
         </div>
         <ul class="features-list">
           <li class="features-list-item">
             <p>1. Fair prices.</p>
-            <span>The diamonds you may buy in jewelry stores are overpriced, because their production is controlled by the monopolists. Diamond Open Market will form an alternative market by working with small-scale producers and independent diamond resellers.</span>
+            <span>The diamonds you may buy in jewelry stores are overpriced, because their production is controlled by
+              the monopolists. Diamond Open Market will form an alternative market by working with small-scale producers
+              and independent diamond resellers.</span>
           </li>
           <li class="features-list-item">
             <p>2. A marketplace, operating worldwide.</p>
@@ -27,32 +30,34 @@
           </li>
           <li class="features-list-item">
             <p>3. Natural or lab-grown diamonds are available in one place.</p>
-            <span>The DOM platform will allow users to choose between the natural or lab-grown diamonds from the best manufacturers and individually agree on the prices. It will also present the whole range of related services, including the shipping, evaluation and certifying of the stone.</span>
+            <span>The DOM platform will allow users to choose between the natural or lab-grown diamonds from the best
+              manufacturers and individually agree on the prices. It will also present the whole range of related
+              services, including the shipping, evaluation and certifying of the stone.</span>
           </li>
           <li class="features-list-item">
             <p>4. Variety of payment methods.</p>
-            <span>The counterparties might agree on different paying methods, including banking, cash or cryptocurrency transactions.</span>
+            <span>The counterparties might agree on different paying methods, including banking, cash or cryptocurrency
+              transactions.</span>
           </li>
           <li class="features-list-item">
             <p>5. No fees or commissions.</p>
-            <span>DOM will be built on EOS blockchain ecosystem and operate without any fees for both counterparties.</span>
+            <span>DOM will be built on EOS blockchain ecosystem and operate without any fees for both
+              counterparties.</span>
           </li>
           <li class="features-list-item">
             <p>6. Professional search and selection system.</p>
-            <span>If you have no knowledge about diamonds or real asset trading experience, you can easily become a pro with our advanced and intuitive search and selection system.</span>
+            <span>If you have no knowledge about diamonds or real asset trading experience, you can easily become a pro
+              with our advanced and intuitive search and selection system.</span>
           </li>
         </ul>
 
       </div>
-      </div>
-      <div class="text-info-block">
-        <h4>{{'KEY FEATURES FOR TRADERS' | translate}}</h4>
+    </div>
+    <div class="text-info-block">
+      <h4>{{'KEY FEATURES FOR TRADERS' | translate}}</h4>
       <div class="key-features-wr">
         <div class="infogr-wr">
-          <img
-            src="assets/img/ieo/sell.png"
-            alt=""
-          >
+          <img src="assets/img/ieo/sell.png" alt="">
         </div>
         <ul class="features-list">
           <li class="features-list-item">
@@ -61,7 +66,9 @@
           </li>
           <li class="features-list-item">
             <p>2. Build your business instantly with DOM value-added services</p>
-            <span>The DOM platform’s value-added services can support any business and individual traders’ needs. These services include relevant search, storage, insurance and shipping services as well as ads and promotions on the platform. The services can be paid with DOM tokens.</span>
+            <span>The DOM platform’s value-added services can support any business and individual traders’ needs. These
+              services include relevant search, storage, insurance and shipping services as well as ads and promotions
+              on the platform. The services can be paid with DOM tokens.</span>
           </li>
           <li class="features-list-item">
             <p>3. Personal manager support and arbitration system.</p>
@@ -69,11 +76,16 @@
           </li>
           <li class="features-list-item">
             <p>4. Secured smart contracts, allowing to implement any business logic.</p>
-            <span>The safety issue can easily be solved by using smart contracts. This way the seller will not receive payments until the service or product is provided or delivered. Every transaction might be tracked with the help of blockchain. Complex deals can also be done using the individual smart contract that might be adjusted to every business needs.</span>
+            <span>The safety issue can easily be solved by using smart contracts. This way the seller will not receive
+              payments until the service or product is provided or delivered. Every transaction might be tracked with
+              the help of blockchain. Complex deals can also be done using the individual smart contract that might be
+              adjusted to every business needs.</span>
           </li>
           <li class="features-list-item">
             <p>5. Mobile version and a messenger.</p>
-            <span>DOM will meet the highest requirements of convenience being presented in desktop and mobile versions and translated to 16 languages. Another feature will be the messenger inside the platform, which can be used among counterparties to make contacts and agree on deals individually.</span>
+            <span>DOM will meet the highest requirements of convenience being presented in desktop and mobile versions
+              and translated to 16 languages. Another feature will be the messenger inside the platform, which can be
+              used among counterparties to make contacts and agree on deals individually.</span>
           </li>
         </ul>
 
@@ -84,7 +96,11 @@
       <div class="economics-inner">
         <div class="text-info-block">
           <h4>DOM TOKEN SALE AND ECONOMICS</h4>
-          <p>The initial circulating emission of DOM tokens is 360,000,000 DOM (5%). The crowdsale financing model consists of two stages: Private Sale which was held in April 2019 and Public IEO Sale on Exrates platform to be held on September 2019. <br>62,857,142 DOM tokens were sold during the private sale at a price of $0.0014 per token. The DOM plans to raise $1,500,000 at the IEO stage. The IEO fund accounts for 5% of the total issue. A total of 300,000 000 DOM tokens will be sold at a price of $0.005 per token.
+          <p>The initial circulating emission of DOM tokens is 360,000,000 DOM (5%). The crowdsale financing model
+            consists of two stages: Private Sale which was held in April 2019 and Public IEO Sale on Exrates platform to
+            be held on September 2019. <br>62,857,142 DOM tokens were sold during the private sale at a price of $0.0014
+            per token. The DOM plans to raise $1,500,000 at the IEO stage. The IEO fund accounts for 5% of the total
+            issue. A total of 300,000 000 DOM tokens will be sold at a price of $0.005 per token.
           </p>
         </div>
         <div class="economics-table">
@@ -102,7 +118,7 @@
                 <p>Token Sale End Time</p>
               </div>
               <div class="table-item-value">
-                <p>When Hard Cap is reached or at XXXX.2019 14:00, UTC+8</p>
+                <p>When Hard Cap is reached or at 11.10.2019 14:00, UTC+8</p>
               </div>
             </div>
 
@@ -337,7 +353,8 @@
                   <p>10%</p>
                 </div>
                 <div class="table-item-description">
-                  <p>10% of tokens unlocked after the IEO and the remaining 90% of tokens will be unlocked evenly every 3 months for the period of one year.</p>
+                  <p>10% of tokens unlocked after the IEO and the remaining 90% of tokens will be unlocked evenly every
+                    3 months for the period of one year.</p>
                 </div>
               </div>
               <div class="economics-table-item">
@@ -370,24 +387,27 @@
                   <p>40%</p>
                 </div>
                 <div class="table-item-description">
-                  <p>20% of tokens will be unlocked in 3 month after exchange listing, 80% of the remaining tokens will be unlocked every 6 month evenly.</p>
+                  <p>20% of tokens will be unlocked in 3 month after exchange listing, 80% of the remaining tokens will
+                    be unlocked every 6 month evenly.</p>
                 </div>
               </div>
 
             </div>
           </div>
           <div class="graph-wr">
-            <img
-              src="assets/img/ieo/graph-ieo.png"
-              alt=""
-            >
+            <img src="assets/img/ieo/graph-ieo.png" alt="">
           </div>
         </div>
       </div>
     </div>
     <div class="text-info-block last-block">
       <h4>CONCLUSION</h4>
-      <p>Diamond Open Market is a unique and extremely ambitious project, which currently has no analogues. By opening new and formerly closed market to a wide audience, DOM will form alternative fair and transparent pricing mechanism.<br>DOM will make a convenient platform for both business and individuals willing to sell or buy their diamonds, heirloom or other jewellery.<br><br>DOM has done a massive preparatory work, gathered a unique team of specialists and is ready to solve urgent problems of the diamond market. Diamond Open Market will be in demand among the widest audience and will not just find, but create its own niche.
+      <p>Diamond Open Market is a unique and extremely ambitious project, which currently has no analogues. By opening
+        new and formerly closed market to a wide audience, DOM will form alternative fair and transparent pricing
+        mechanism.<br>DOM will make a convenient platform for both business and individuals willing to sell or buy their
+        diamonds, heirloom or other jewellery.<br><br>DOM has done a massive preparatory work, gathered a unique team of
+        specialists and is ready to solve urgent problems of the diamond market. Diamond Open Market will be in demand
+        among the widest audience and will not just find, but create its own niche.
       </p>
     </div>
   </div>
